# gp7_ws

install/: local_setup.sh  setup.sh
install/gp7_control/lib/gp7_control/: pick_and_place  simple_joint_move  test_movement
install/gp7_control/share/gp7_control/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/gp7_description/share/gp7_description/: package.ps1  package.sh  package.xml
install/gp7_description/share/gp7_description/cmake/: gp7_descriptionConfig.cmake
install/gp7_description/share/gp7_description/config/: gp7_controllers.yaml
install/gp7_description/share/gp7_description/launch/: display.launch  gazebo.launch  gp7_display.launch.py  gp7_gazebo.launch.py  gp7_gazebo_control.launch.py
install/gp7_description/share/gp7_description/meshes/: link_1.STL  link_2.STL  link_3.STL  link_5.STL  link_7.STL
install/gp7_description/share/gp7_description/urdf/: gp7.csv  gp7.urdf  gp7.urdf.xacro
install/gp7_description/share/gp7_description/worlds/: gp7_world.sdf
log/: latest_build
src/gp7_control/: setup.cfg  setup.py
src/gp7_control/gp7_control/: kinematics.py  pick_and_place_node.py  test_movement_node.py
src/gp7_description/: CMakeLists.txt
src/gp7_description/config/: gp7_controllers.yaml  urdf.rviz
src/gp7_description/launch/: gp7_gazebo.launch.py
src/gp7_description/meshes/: base_link.STL  link_4.STL  link_6.STL  link_8.STL
src/gp7_description/urdf/: gp7.urdf  gp7.urdf.xacro
src/gp7_description/worlds/: gp7_world.sdf
(+2 files in other folders)
