<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gp7_description</name>
  <version>1.0.0</version>
  <description>
    URDF Description package for GP7 Robot
    This package contains configuration data, 3D models and launch files
    for GP7 Robot
  </description>
  <author>Pankaja Balasooriya</author>
  <maintainer email="pankajabalasooriya566@gmail.com">Pankaja Balasooriya</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>